--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="scss/style.css">
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/fontawesome.min.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
 <body>
   <nav>
     <div class="logo"><b>DW</b></div>
@@ -48,6 +47,79 @@
       </li>
     </ul>
   </nav>
+
+
+<!-----------nav ends----------->
+
+
+
+<!------------home------------>
+
+
+<section id="home">
+  <div class="home1">
+    <h1><b>Pets Boarding Services</b></h1>
+    <div class="leftpad">
+      <div class="home1_1">
+        <i class="fab fa-github"></i>
+      </div>
+      <div class="home1_2">
+        <h2><b>Boarding Any Pets</b></h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem, unde.</p>
+      </div>
+      <button class="book"><a href="#">Book Now</a></button>
+    </div>
+  </div>
+  <div class="home2">
+  </div>
+</section>
+
+
+
+<!--------------home end-------------->
+
+
+
+<!-------------Features--------------->
+
+
+<section id="sec2">
+  <div><h2>Our Features</h2></div>
+    <div class="oneThird">
+      <div class="greyBack1">
+        <div class="para1st">
+          <p>Pets <br> Boarding</p>
+          <a href="#">VIEW MORE <i class="fas fa-arrow-right"></i></a>
+        </div>
+      </div>
+    </div>
+
+    
+    <div class="oneThird">
+      <div class="greyBack2">
+        <div class="para2nd">
+          <p>Heathy <br> meals</p>
+          <a href="#">VIEW MORE <i class="fas fa-arrow-right"></i></a>
+        </div>
+      </div>
+    </div>
+
+    <div class="oneThird middel">
+      <div class="greyBack3">
+        <div class="para3rd">
+          <p>Activity <br> exercise</p>
+          <a href="#">VIEW MORE <i class="fas fa-arrow-right"></i></a>
+        </div>
+      </div>
+    </div>
+
+
+</section>
+
+
+
+
+
      <!-- JS FILES -->
      <script src="js/jquery-3.6.0.min.js"></script>
      <script src="js/owl.carousel.min.js"></script>
