--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap" rel="stylesheet">
     <link rel="shortcut icon" type="image/x-icon" href="img/logo.png">
     <title>Taiob Md. Ridwan</title>
     <link rel="stylesheet" href="css/style.css">
@@ -93,7 +96,6 @@
         </div>
       </div>
     </div>
-
     
     <div class="oneThird">
       <div class="greyBack2">
@@ -112,9 +114,347 @@
         </div>
       </div>
     </div>
-
-
 </section>
+
+
+
+<!-------- ----------Features End------------- -->
+
+
+
+<!---------------- happy-------------- -->
+
+
+<section id="happy">
+  <div class="firstHalf">
+  </div>
+  <div class="secondHalf">
+    <h1>We can keep <c> them happy</c></h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus officiis cum reprehenderit voluptatem facere rem voluptatum tempore quia labore pariatur. Necessitatibus, voluptates sequi earum laboriosam repellat modi aliquam veritatis sit.</p>
+    <button class="book"><a href="#">Book Now</a></button>
+  </div>
+</section>
+
+
+<!-- pros&cons-------------------------- -->
+
+
+<section id="ase">
+  <div class="ase">
+    <div class="aseContent">
+      <i class="fas fa-cookie-bite iconAse"></i>
+      <h2>Healthy Meals</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, consectetur!</p>
+      <a href="#">view more <i class="fas fa-arrow-right"></i></a>
+    </div>
+    <div class="aseContent">
+      <i class="fas fa-globe-americas iconAse"></i>
+      <h2>Activity Games</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, consectetur!</p>
+      <a href="#">view more <i class="fas fa-arrow-right"></i></a>
+    </div>
+    <div class="aseContent">
+      <i class="fab fa-github iconAse"></i>
+      <h2>Pet Taxi</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, consectetur!</p>
+      <a href="#">view more <i class="fas fa-arrow-right"></i></a>
+    </div>
+    <div class="aseContent">
+      <i class="fas fa-home iconAse"></i>
+      <h2>Pets Boarding</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, consectetur!</p>
+      <a href="#">view more <i class="fas fa-arrow-right"></i></a>
+    </div>
+  </div>
+</section>
+
+
+<!---------------Activities----------------->
+
+
+<section id="activities">
+  <div class="fourtyPers">
+    <h2>Activities and Exercise</h2>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis, dolore!</p>
+    <div>
+      <h5><i class="fas fa-cookie-bite"></i> EAT</h5>
+      <h5><i class="fas fa-globe-americas"></i> PLAY</h5>
+      <h5><i class="fab fa-github"></i> BRUSH</h5>
+    </div>
+    <div>
+      <button class="viewMore"><a href="#">view more</a></button>
+      <button class="book2"><a href="#">Book Now</a></button>
+    </div>
+  </div>
+  <div class="sixtyPers"></div>
+</section>
+
+
+<!-- -------------cats&Dogs------------- -->
+
+
+<section id="catsNdogs">
+  <div class="dogs">
+    <h1>Dogs</h1>
+    <p><i class="fas fa-check"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore.</p>
+    <p><i class="fas fa-check"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe ullam deserunt inventore a?</p>
+    <p><i class="fas fa-check"></i> Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+    <p><i class="fas fa-check"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus voluptate numquam minus!</p>
+    <p><i class="fas fa-check"></i> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae, porro.</p> 
+  </div>
+
+  <div class="cats">
+    <h1>Cats</h1>
+    <p> <i class="fas fa-check"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore.</p>
+    <p> <i class="fas fa-check"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe ullam deserunt inventore a?</p>
+    <p> <i class="fas fa-check"></i> Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+    <p> <i class="fas fa-check"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus voluptate numquam minus!</p>
+    <p> <i class="fas fa-check"></i> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae, porro.</p> 
+  </div>
+</section>
+
+
+<!-- -------------Dogs & ats end------------ -->
+
+
+
+<!---------------- HAMSTAR-------------- -->
+
+
+<section id="hamstar">
+  <div class="ham1">
+  </div>
+  <div class="ham2">
+    <i class="fas fa-quote-right"></i>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus officiis cum reprehenderit veritatis sit.</p>
+    <p>Boby James</p>
+    <p>Hamstar</p>
+  </div>
+</section>
+
+
+
+
+<!-- --------------Packages-------------- -->
+
+
+
+
+<section id="package">
+  <div class="oneFourth">
+    <p>BRING YOUR PET</p>
+    <h2>The Best choice</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, modi earum, quo imos voluptate architecto.</p>
+    <button><a href="#">GET QUOTE</a></button>
+  </div>
+
+  <div class="threeFourth">
+    <a href="#" class="thirtyThree">
+      <p class="pet">pet care</p>
+      <h2>1 Day</h2>
+      <i class="fas fa-home"></i>
+      <div class="table">
+        <p>Double room<i class="fas fa-check"></i></p>
+        <p>Scoialise<i class="fas fa-check"></i></p>
+        <p>Brush<i class="fas fa-check"></i></p>
+        <p>Pet TV<i class="fas fa-times"></i></p></div>
+      <h2>50<sup>$</sup></h2>
+      </a>
+
+    <a href="#" class="thirtyThree">
+      <p class="pet">pet care</p>
+      <h2>10 Day</h2>
+      <i class="fas fa-home"></i>
+      <div class="table">
+        <p>single room<i class="fas fa-check"></i></p>
+        <p>Scoialise Exercise<i class="fas fa-check"></i></p>
+        <p>Custom Meals<i class="fas fa-check"></i></p>
+        <p>Spa and Grooming<i class="fas fa-check"></i></p></div>
+      <h2>350<sup>$</sup></h2>
+      </a>
+
+    <a href="#" class="thirtyThree">
+      <p class="pet">pet care</p>
+      <h2>20 Day</h2>
+      <i class="fas fa-home"></i>
+      <div class="table">
+        <p>single room<i class="fas fa-check"></i></p>
+        <p>Exercise 2x<i class="fas fa-check"></i></p>
+        <p>Custom Meals<i class="fas fa-check"></i></p>
+        <p>Grooming 2x<i class="fas fa-times"></i></p></div>
+      <h2>550<sup>$</sup></h2>
+      </a>
+  </div>
+</section>
+
+
+<!---------------Packages----------------->
+
+
+
+
+
+
+
+<!---------------CheckIn Times----------------->
+
+
+<section id="checkin">
+  <div class="checkin1">
+    <h1>Check-in Time</h1>
+    <div class="time">
+      <i class="fas fa-stopwatch"></i>
+      <div>
+        <h2>from 8 to 10 am</h2>
+        <p>Lorem ipsum dolor sit amet consectetur.</p>
+      </div>
+    </div>
+    <div class="time">
+      <i class="fas fa-globe-americas"></i>
+      <div>
+        <h2>favourite toys</h2>
+        <p>Lorem ipsum dolor sit amet consectetur.</p>
+      </div>
+    </div>
+    <div>
+      <button class="book"><a href="#">Book Now</a></button>
+    </div>
+  </div>
+  <div class="checkin2"></div>
+</section>
+
+
+
+<!-- -------------checkin ends--------------- -->
+
+
+
+
+<!---------------- Dogs care-------------- -->
+
+
+
+<section id="dogsCare">
+  <div class="dogsCare1">
+  </div>
+  <div class="dogsCare2">
+    <h1>Dog <c>Boarding</c></h1>
+    <div class="boardingBox">
+      <i class="fas fa-check"></i>
+      <p>well-trained staff</p>
+      <i class="fas fa-plus"></i>
+    </div>
+    <div class="boardingBox">
+      <i class="fas fa-check"></i>
+      <p>meticulous about meds</p>
+      <i class="fas fa-plus"></i>
+    </div>
+    <div class="boardingBox">
+      <i class="fas fa-check"></i>
+      <p>what to bring</p>
+      <i class="fas fa-plus"></i>
+    </div>
+  </div>
+</section>
+
+
+<!-- --------------dogsCare end--------------- -->
+
+
+
+
+<!-- ----------------CatsBoarding---------------- -->
+
+
+
+
+
+<section id="catsCare">
+  <div class="catsCare1">
+    <h1>Cat <c>Boarding</c></h1>
+    <div class="boardingBox">
+      <i class="fas fa-check"></i>
+      <p>well-trained staff</p>
+      <i class="fas fa-plus"></i>
+    </div>
+    <div class="boardingBox">
+      <i class="fas fa-check"></i>
+      <p>meticulous about meds</p>
+      <i class="fas fa-plus"></i>
+    </div>
+    <div class="boardingBox">
+      <i class="fas fa-check"></i>
+      <p>what to bring</p>
+      <i class="fas fa-plus"></i>
+    </div>
+  </div>
+  <div class="catsCare2"></div>
+</section>
+
+
+
+
+<!-- ---------------oFF------------------- -->
+
+
+
+<section id="off">
+  <div class="off">
+    <div class="offWriting">
+      <p><c>Pets Boarding</c> 40% OFF</p>
+    </div>
+    <div class="offImg">
+      <img src="img/kalaKutta.png" alt="kalaKutta">
+    </div>
+    <div class="offBook">
+      <button class="book"><a href="#">Book Now</a></button>
+    </div>
+  </div>
+</section>
+
+
+<!-- ----------Contact box------------ -->
+
+
+
+<section id="contact">
+  <div class="contact1">
+    <img src="img/contact.jpg" alt="">
+  </div>
+  <div class="contact2">
+    <form action="">
+      <p>planning a vacation?</p>
+      <p>Contact Us</p>
+      <select name="pet" id="">
+        <option value="Dog Boarding">Dog Boarding</option>
+        <option value="Cat Boarding">cat Boarding</option>
+        <option value="Other Pets">Other Pets</option>
+      </select>
+
+      <input type="number" id="quantity" name="quantity" min="1" max="30" placeholder="Days (Maximum 30 Days)">
+
+      <input type="email" placeholder="E-mail"><button class="book"><a href="#">Send</a></button>
+    </form>
+  </div>
+</section>
+
+
+
+
+
+
+<!-- ----------footer------------- -->
+
+
+
+<section id="footer">
+  <div class="footer">
+    <p>© Copyright TM Ridwan - All Rights Reserved
+    </p>
+  </div>
+</section>
+
+
 
 
 
