--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     </div>
     <div class="aseContent">
       <i class="fas fa-globe-americas iconAse"></i>
-      <h2>Activity Games</h2>
+      <h2>Active Games</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, consectetur!</p>
       <a href="#">view more <i class="fas fa-arrow-right"></i></a>
     </div>
